# 2erBrain

./: .gitignore  AGENTS.md  Codex.md  MASTER-AUFTRAG CODEX SECOND BRAIN FÜR PYTHON, C, LUA UND Cplusspluss.txt  MASTER-ORDER CODEX SECOND BRAIN FOR PYTHON C LUA AND CPP.txt  README.md
.github/workflows/: ci.yml
docs/codex-second-brain/: README.md
docs/codex-second-brain/00-system/: definition-of-done.md  final-verification-report.md  glossary.md  implementation-audit.md  learning-roadmap.md  mission-and-scope.md  navigation.md  source-policy.md
docs/codex-second-brain/01-language-overview/: decision-matrix.md  interoperability-map.md  language-comparison.md
docs/codex-second-brain/02-python/: 01-foundations.md  02-data-types-and-control-flow.md  03-functions-modules-packages.md  04-object-oriented-programming.md  05-error-handling.md  06-file-io-and-databases.md  07-asyncio-and-concurrency.md  08-testing-debugging-profiling.md  09-security.md  10-apis-flask-and-automation.md  11-ai-rag-and-agent-systems.md  12-common-pitfalls.md  README.md  cheat-sheet.md  (+1 more)
examples/c/event_parser/: AGENTS.md  CMakeLists.txt  README.md
examples/c/event_parser/include/: event_parser.h
examples/c/event_parser/src/: demo.c  event_parser.c
examples/c/event_parser/tests/: test_event_parser.c
examples/cpp/modular_gameplay_core/: AGENTS.md  CMakeLists.txt  README.md
examples/cpp/modular_gameplay_core/include/gameplay/: event_bus.hpp  health_component.hpp  lua_runtime_adapter.hpp
examples/cpp/modular_gameplay_core/src/: event_bus.cpp  health_component.cpp
examples/cpp/modular_gameplay_core/tests/: test_gameplay.cpp
examples/python/knowledge_ingestion_api/: .env.example  AGENTS.md  README.md  pyproject.toml
examples/python/knowledge_ingestion_api/src/second_brain_api/: __init__.py  app.py  config.py  database.py  errors.py  ingestion.py  models.py  repository.py  search.py
examples/python/knowledge_ingestion_api/tests/: test_api.py  test_config.py  test_ingestion.py  test_repository.py  test_search.py
scripts/: check_local_links.py  check_placeholder_content.py  run_all_checks.py  validate_docs.py
(+111 files in other folders)
