cmake_minimum_required(VERSION 3.16)
project(event_parser C)
set(CMAKE_C_STANDARD 17)
option(ENABLE_SANITIZERS "Enable sanitizers" OFF)
add_library(event_parser src/event_parser.c)
target_include_directories(event_parser PUBLIC include)
target_compile_options(event_parser PRIVATE -Wall -Wextra -Wpedantic)
if(ENABLE_SANITIZERS AND CMAKE_C_COMPILER_ID MATCHES "Clang|GNU")
  target_compile_options(event_parser PRIVATE -fsanitize=address,undefined)
  target_link_options(event_parser PUBLIC -fsanitize=address,undefined)
endif()
add_executable(event_parser_demo src/demo.c)
target_link_libraries(event_parser_demo event_parser)
enable_testing()
add_executable(test_event_parser tests/test_event_parser.c)
target_link_libraries(test_event_parser event_parser)
add_test(NAME event_parser_tests COMMAND test_event_parser)
