cmake_minimum_required(VERSION 3.20)
project(modular_gameplay_core CXX)
set(CMAKE_CXX_STANDARD 20)
option(ENABLE_SANITIZERS "Enable sanitizers" OFF)
add_library(gameplay src/event_bus.cpp src/health_component.cpp)
target_include_directories(gameplay PUBLIC include)
target_compile_options(gameplay PRIVATE -Wall -Wextra -Wpedantic)
if(ENABLE_SANITIZERS AND CMAKE_CXX_COMPILER_ID MATCHES "Clang|GNU")
  target_compile_options(gameplay PRIVATE -fsanitize=address,undefined)
  target_link_options(gameplay PUBLIC -fsanitize=address,undefined)
endif()
enable_testing()
add_executable(gameplay_tests tests/test_gameplay.cpp)
target_link_libraries(gameplay_tests gameplay)
add_test(NAME gameplay_tests COMMAND gameplay_tests)
