[project]
name='second-brain-api'
version='0.1.0'
dependencies=['Flask>=3.0']
[project.optional-dependencies]
dev=['pytest','ruff','mypy']
[build-system]
requires=['setuptools>=68']
build-backend='setuptools.build_meta'
[tool.setuptools.packages.find]
where=['src']
[tool.ruff]
line-length=100
[tool.mypy]
python_version='3.11'
strict=true
